# whatsapp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.kamal/: secrets.example
app/: main.py
app/core/: config.py
app/handlers/: message_handlers.py
app/services/: core_client.py  formatting.py  media.py  sender.py
config/: deploy.yml
tests/: test_formatting.py  test_handlers.py  test_media.py  test_send.py
