[project]
name = "chasqui-whatsapp"
version = "0.1.0"
description = "Chasqui WhatsApp gateway — stateless PyWa channel adapter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.12.0",
    "pywa[fastapi]>=4.0.0",
    "sentry-sdk>=2.52.0",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

# PyWa 4.x (BSUID support) currently ships as a pre-release.
[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
